--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,58 @@ h4 {
   padding-bottom: 5px;
 }
 
+.signup-container {
+  background-color: white;
+  border-radius: 10px;
+  padding: 30px;
+  max-width: 90%;
+  margin: 30px auto;
+  box-shadow: 0 4px 10px 0px;
+}
+
+.signup-container h2 {
+  color: #003087;
+  font-weight: 800; 
+  font-size: 32px;
+  line-height: 1.3;
+  margin-bottom: 16px;
+  font-family: Arial;
+}
+
+.signup-container p {
+  margin-bottom: 21px;
+  font-size: 16px;
+  font-family: Arial;
+}
+
+form label {
+  display: block;
+  margin-bottom: 15px;
+  font-weight: bold;
+}
+
+form input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 7px;
+}
+
+form button {
+  width: 100%;
+  padding: 12px;
+  background-color: #002b7f;
+  color: white;
+  border: none;
+  border-radius: 7px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #001c5b;
+}
 .tagline {
   text-align: center;
   color: #666;
