--- a/css/style.css
+++ b/css/style.css
@@ -14,21 +14,15 @@ a {
   font-style: normal;
 }
 
-p, li, h2, h5 {
+label, h2, h5 {
   font-family: "Oswald", Arial, sans-serif;
   font-weight: 200;
   font-style: normal;
 }
 
-h3, h4 {
+h3, #submit {
   font-family: "Oswald", Arial, sans-serif;
   font-weight: 600;
-  font-style: normal;
-}
-
-h4 {
-  font-family: "Oswald", Arial, sans-serif;
-  font-weight: 400;
   font-style: normal;
 }
 
@@ -101,8 +95,8 @@ h4 {
 
 .subscribe {
   text-align: center;
-  max-width: 100%;
   margin: auto;
+  max-width: 100%;
   border-radius: 2px;
   padding-bottom: 5px;
 }
@@ -116,33 +110,36 @@ h4 {
 }
 
 .signup-container {
-  background-color: white;
+  background-color: #f3f3f3;
   border-radius: 10px;
   padding: 30px;
   max-width: 90%;
-  margin: 30px auto;
+  margin: auto;
   box-shadow: 0 4px 10px 0px;
 }
 
 .signup-container h2 {
   color: #003087;
-  font-weight: 800; 
-  font-size: 32px;
+  font-weight: 600; 
+  font-size: 30px;
+  text-align: center;
   line-height: 1.3;
   margin-bottom: 16px;
-  font-family: Arial;
 }
 
 .signup-container p {
   margin-bottom: 21px;
-  font-size: 16px;
-  font-family: Arial;
+  font-size: 18px;
+  font-weight: 300;
+  color: black;
+  line-height: 1.4;
 }
 
 form label {
   display: block;
   margin-bottom: 15px;
   font-weight: bold;
+  color: black;
 }
 
 form input {
@@ -153,8 +150,7 @@ form input {
   border-radius: 7px;
 }
 
-form button {
-  width: 100%;
+input[type=submit] {
   padding: 12px;
   background-color: #002b7f;
   color: white;
@@ -164,7 +160,7 @@ form button {
   cursor: pointer;
 }
 
-form button:hover {
+input[type=submit]:hover {
   background-color: #001c5b;
 }
 
@@ -302,7 +298,12 @@ form button:hover {
 .recipe-highlights p {
   margin: 5px 0;
 }
-                  
+
+#text {
+  display: none;
+  color: red;
+  font-size: 15px;
+}
 
 @media screen and (min-width: 768px) {  
   .container {
